@@ -5,6 +5,8 @@ software-store (0.1.3) karmic; urgency=low
   * exit when the main window is closed
   * debian/postrm:
     - fix bug on purge (LP: #420042)
+  * softwarestore/app.py, data/ui/SoftwareStore.ui:
+    - add launchpad integration help (if available)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 17:40:09 +0200
 
